test commit and minor changes

--- a/eventlistner.html
+++ b/eventlistner.html
@@ -8,7 +8,7 @@
 <body>
     <p>This is an example of adding multiple events to the same element</p>
     <p>Click the following button to see the effect</p>
-    <button>click the button</button>
+    <button id="btn">click the button</button>
     <p id ="para"></p>
     <p id ="para1"></p>
     <script>
@@ -28,3 +28,4 @@
         </script>
 </body>
 </html>
+write a html program to prin the hall ticket of a student use java script also
